test/libsolidity/syntaxTests/inlineAssembly/for_visibility_7.sol
contract C {
    function f() public pure {
        assembly {
            for {} i {} { let i := 1 }
        }
    }
}
// ----
// DeclarationError 8198: (82-83): Identifier not found.
